--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Ten Principles for Good Design by Dieter Rams</h1>
-    <img src="img/dram.jpeg" alt="Ten Principles"> 
+    <img src="img/Drams.jpeg" alt="Ten Principles"> 
     <p>Good design…</p>
     <ul>
       <li>Is innovative. The possibilities for progression are not, by any means, exhausted. Technological development is always offering new opportunities for original designs. But imaginative design always develops in tandem with improving technology, and can never be an end in itself.</li>
